page contacts finished

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <!-- DEFAULTS -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Freedom-riders</title>
+    <title>Červinka, s.r.o</title>
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -151,7 +151,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-6 order-2 order-lg-1">
-                    <img src="img/homepage-map.png" alt="mapa" class="img-fluid mt-5 mb-lg-0">
+                    <img src="img/homepage-map.png" alt="mapa" class="img-fluid mt-5 mt-lg-0">
                 </div>
                 <div class="col-12 col-lg-6 order-1 order-lg-2">
                     <div class="section__title ">
